--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bus ticket</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <style></style>
 </head>
 <body>
     <nav>
@@ -17,11 +19,18 @@
             <div class="navbar-user-section">
                 <div class="help">
                     <i class="fa fa-solid fa-headset" style="color:  #15252D;"></i>
-                    help
+                    <span>help</span>
                 </div>
                 <div class="user">
-                    <i class="fa fa-regular fa-circle-user" style="color: #15252D;"></i>
-                    user
+                    <span><i class="fa fa-regular fa-circle-user" style="color: #15252D;"></i>
+                    user</span>
+                    <ul class="hide">
+                        <li><a href="#">cancel ticket</a></li>
+                        <li><a href="#">change travel date</a></li>
+                        <li><a href="#">show my ticket</a></li>
+                        <li><a href="#">email/SMS</a></li>
+                        <li><a href="#">login / signup</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -39,7 +48,7 @@
                     <input type="radio"  id="bus-tab"  checked>
                     
                 </div>
-                <div class="search-accordian-content display">
+                <div class="search-accordian-content ">
                     <form action="">
                         <div>
                         <div class="from alignment">
@@ -98,14 +107,14 @@
                         <div>
                         <div class="date-of-travel alignment">
                             <p>onword :</p>
-                            <input type="text"  id="travel-date" value="wed, 19-12-2023" placeholder="wed, 19-12-2023">
+                            <input type="text"  id="travel-date"  placeholder="wed, 19-12-2023" class="date-input">
                             <i class="fa fa-solid fa-calendar-days symbol-position" style="color: #f78812;"></i>
                         </div>
                         </div>
                         <div>
                         <div class="date-of-return-travel alignment">
                             <p>return :</p>
-                            <input type="text" name="travel-date" id="travel-date-return" value="" placeholder="optional">
+                            <input type="text" name="travel-date" id="travel-date-return"  placeholder="optional" class="date-input">
                             <i class="fa fa-solid fa-calendar-days symbol-position" style="color: #f78812;"></i>
                         </div>
                         </div>
@@ -125,7 +134,7 @@
                 <i class="fa fa-solid fa-plus symbol-position" style="color: #15252D;" ></i>
                 <input type="radio" name="cargo-tab"  id="cargo-tab"  >               
             </div>
-            <div class="search-accordian-content">
+            <div class="search-accordian-content hide">
                 <form action="">
                     <div>
                     <div class="from alignment">
@@ -184,7 +193,7 @@
                     <div>
                     <div class="date-of-travel alignment">
                         <p>onword :</p>
-                        <input type="text" name="travel-date" id="travel-date-cargo" value="wed, 19-12-2023" placeholder="wed, 19-12-2023">
+                        <input type="text" name="travel-date" id="travel-date-cargo"  placeholder="wed, 19-12-2023" class="date-input">
                         <i class="fa fa-solid fa-calendar-days symbol-position" style="color: #f78812;"></i>
                     </div>
                     </div>
@@ -206,7 +215,7 @@
                     <i class="fa fa-solid fa-plus symbol-position" style="color: #15252D;" ></i>
                     <input type="radio"  id="bus-hire-tab"  >
                 </div>
-                <div class="search-accordian-content">
+                <div class="search-accordian-content hide">
                 <form action="">
                     <div >
                         <div id="input-alignment">
@@ -256,5 +265,6 @@
     <script src="app.js">
         
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </body>
 </html>
