--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="navbar ">
             <div class="logo">
-                <img src="/images/logo.jpg" alt="">
+                <img src="./images/logo.jpg" alt="">
             </div>
             DigambarTravels
             <div class="navbar-user-section">
